* listing all locations/ logging in and out

--- a/Wanderlust-Web/templates/navigation.html
+++ b/Wanderlust-Web/templates/navigation.html
@@ -2,7 +2,6 @@
 <ul>
     <li><a href="#/home/">Home</a></li>
     <li><a href="#/office/">Office notes</a></li>
-    <li><a href="#/myNotes/">My notes</a></li>
-    <li><a href="#/addNote/">Add note</a></li>
+    <li><a href="#/addLocation/">Add Location</a></li>
     <li><a href="#/logout/">Logout</a></li>
 </ul>
